syntax = "proto3";
package monitor.proto;

message CpuStat{
    string cpu_name = 1;
    float cpu_percent = 2;// 总 CPU 使用百分比 使用百分百比表示=1-(idle_time/total_time)
    float usr_percent = 3;// 用户态 CPU 使用百分比
    float system_percent = 4;// 内核态 CPU 使用百分比
    float nice_percent = 5;// 用户态低优先级 CPU 使用百分比, 即nice值在 1 到 19 之间（nice值在-20 到 -1 之间表示高优先级）
    float idle_percent = 6;// 空闲 CPU 使用百分比
    float io_wait_percent = 7;// 
    float irq_percent = 8;// 硬中断 CPU 使用百分比
    float soft_irq_percent = 9;// 
  }